--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "i18next": "^23.7.6",
     "next": "14.0.3",
     "next-i18next": "^15.0.0",
