--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next": "^23.7.6",
     "next": "14.0.3",
     "next-i18next": "^15.0.0",
+    "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
