--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.0.3",
     "next-i18next": "^15.0.0",
     "nodemailer": "^6.9.7",
+    "postcss-nesting": "^12.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
