--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@notionhq/client": "^2.2.13",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.6.2",
     "connected-react-router": "^6.9.3",
     "firebase": "^10.6.0",
     "history": "^5.3.0",
@@ -23,17 +25,21 @@
     "next": "14.0.3",
     "next-i18next": "^15.0.0",
     "nodemailer": "^6.9.7",
+    "notion-to-md": "2.6.0",
     "postcss-nesting": "^12.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.5.0",
     "react-icons": "^4.12.0",
+    "react-markdown": "^9.0.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.19.0",
+    "react-syntax-highlighter": "^15.5.0",
     "recoil": "^0.7.7",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
