--- a/package.json
+++ b/package.json
@@ -9,37 +9,50 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.14.18",
+    "@notionhq/client": "^2.2.13",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.6.2",
     "connected-react-router": "^6.9.3",
     "firebase": "^10.6.0",
     "history": "^5.3.0",
     "i18next": "^23.7.6",
+    "katex": "^0.16.9",
     "next": "14.0.3",
     "next-i18next": "^15.0.0",
     "nodemailer": "^6.9.7",
+    "notion-to-md": "2.6.0",
     "postcss-nesting": "^12.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.5.0",
     "react-icons": "^4.12.0",
+    "react-katex": "^3.0.1",
+    "react-markdown": "^9.0.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.19.0",
+    "react-syntax-highlighter": "^15.5.0",
     "recoil": "^0.7.7",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-katex": "^3.0.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
