--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@notionhq/client": "^2.2.13",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.2",
     "connected-react-router": "^6.9.3",
     "firebase": "^10.6.0",
+    "highlight.js": "^11.9.0",
     "history": "^5.3.0",
     "i18next": "^23.7.6",
     "katex": "^0.16.9",
@@ -33,6 +35,7 @@
     "notion-to-md": "2.6.0",
     "postcss-nesting": "^12.0.1",
     "react": "^18",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.5.0",
@@ -53,6 +56,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-katex": "^3.0.3",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
