--- a/package.json
+++ b/package.json
@@ -57,11 +57,21 @@
     "@types/react-dom": "^18",
     "@types/react-katex": "^3.0.3",
     "@types/react-syntax-highlighter": "^15.5.11",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^8.0.1",
     "eslint-config-next": "14.0.3",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.34.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "*"
+  },
+  "volta": {
+    "node": "21.6.2",
+    "yarn": "4.1.0"
   }
 }
