--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "^5.14.18",
-    "@mui/material": "^5.14.18",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
+    "@mui/styles": "^5.15.14",
     "@notionhq/client": "^2.2.13",
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-router-dom": "^5.3.3",
