--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "history": "^5.3.0",
     "i18next": "^23.7.11",
     "katex": "^0.16.9",
+    "lucide-react": "^0.408.0",
     "next": "14.0.3",
     "next-i18next": "^15.0.0",
     "nodemailer": "^6.9.7",
