--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "recoil": "^0.7.7",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "styled-components": "^6.1.12",
     "swr": "^2.2.4"
   },
   "devDependencies": {
