--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "next.config.js",
+    "postcss.config.js",
   ],
   "exclude": [
     "node_modules"
