--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
   },
   "extends": [
     "standard-with-typescript",
-    "plugin:react/recommended"
+    "plugin:react/recommended",
+    "next/core-web-vitals"
   ],
   "parserOptions": {
     "ecmaVersion": "latest",
@@ -23,6 +24,11 @@
       }
     }
   ],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
   "rules": {
     "import/order": [
       "error",
