--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "swr": "^2.2.4"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.20",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
