--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.408.0",
     "next": "14.0.3",
     "next-i18next": "^15.0.0",
+    "node-cache": "^5.1.2",
     "nodemailer": "^6.9.7",
     "notion-to-md": "2.6.0",
     "postcss-nesting": "^12.0.1",
