--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "katex": "^0.16.9",
     "lucide-react": "^0.408.0",
     "next": "14.0.3",
+    "next-auth": "^4.24.11",
     "next-i18next": "^15.0.0",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.9.7",
@@ -70,6 +71,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.34.1",
     "postcss": "^8",
+    "prettier": "^3.6.2",
     "typescript": "*"
   },
   "volta": {
